--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,6 +31,9 @@
     --destructive: 0 100% 50%;
     --destructive-foreground: 210 40% 98%;
 
+    --success:142.1 76.2% 36.3%;
+    --success-foreground: 355.7 100% 97.3%;
+
     --ring: 215 20.2% 65.1%;
 
     --radius: 0.5rem;
