Added signin,signout toast and new warning variant

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,6 +34,9 @@
     --success:142.1 76.2% 36.3%;
     --success-foreground: 355.7 100% 97.3%;
 
+    --warning:27.22 98.27% 54.71%;
+    --warning-foreground:0 0% 100% ;
+
     --ring: 215 20.2% 65.1%;
 
     --radius: 0.5rem;
